# TemplateCPP

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  main.cpp
config/: clang_debug  clang_debug_win  clang_release_win  gcc_debug
